--- a/package.json
+++ b/package.json
@@ -28,18 +28,19 @@
     "@ionic/pro": "2.0.2",
     "@ionic/schematics-angular": "1.0.0",
     "core-js": "^2.5.3",
+    "oidc-client": "^1.5.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.8",
-    "@angular/compiler": "6.0.9",
-    "@angular/compiler-cli": "6.0.9",
-    "@angular/language-service": "6.0.9",
     "@angular-devkit/architect": "0.7.0-rc.3",
     "@angular-devkit/build-angular": "0.7.0-rc.3",
     "@angular-devkit/core": "0.7.0-rc.3",
     "@angular-devkit/schematics": "0.7.0-rc.3",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler": "6.0.9",
+    "@angular/compiler-cli": "6.0.9",
+    "@angular/language-service": "6.0.9",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.5.2",
