--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.5.2",
     "codelyzer": "~4.4.2",
+    "ionic": "4.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.2",
