Added basic pwa manifest and service worker

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
                 "glob": "auth.html",
                 "input": "./",
                 "output": "./"
-              }
+              },
+              "src/manifest.json"
             ],
             "styles": [
               {
@@ -63,7 +64,8 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "serviceWorker": true
             }
           }
         },
@@ -105,7 +107,8 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "/assets"
-              }
+              },
+              "src/manifest.json"
             ]
           }
         },
