--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "6.0.9",
     "@angular/platform-browser": "6.0.9",
     "@angular/platform-browser-dynamic": "6.0.9",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "6.0.9",
     "@ionic-native/core": "5.0.0-beta.14",
     "@ionic-native/splash-screen": "5.0.0-beta.14",
@@ -31,7 +32,8 @@
     "core-js": "^2.5.3",
     "oidc-client": "^1.5.2",
     "rxjs": "6.2.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/service-worker": "6.0.9"
   },
   "devDependencies": {
     "@angular-devkit/architect": "0.7.0-rc.3",
